# gimp-tgpcdx-plugin

./: .clang-format  CMakeLists.txt  bin.c  bin.h  circular_buffer.c  circular_buffer.h  main.c  meson.build  xml.c  xml.h
